MangoBajito/tests/Lenguajes_2/Declaracion/valid/14-coliao.mng
# Test 14: Definicion y uso del tipo Coliao.
se_prende(){
	coliao Persona {
		nombre : higuerote;
		sexo : negro;
		edad : mango;
	};

	culito yo : Persona;
	culito ella : Persona;
	culito el : Persona;

	yo.nombre = "Junior";
	ella.nombre = "Astrid";
	el.nombre = "Jhonaiker";	
	culito nombres : higuerote[3] = [ella.nombre, el.nombre, yo.nombre];

	yo.sexo = 'M';
	ella.sexo = 'F';
	el.sexo = 'M';
	culito sexos : negro[3] = [ella.sexo, el.sexo, yo.sexo];

	yo.edad = 26;
	ella.edad = 23;
	el.edad = 24;
	culito edades : mango[3] = [ella.edad, el.edad, yo.edad];
};
