MangoBajito/tests/Lenguajes_2/Declaracion/errors/13-arrozConMango_anidado.mng
# Test 13: Errores de uso anidado del tipo arroz_con_mango.
se_prende(){
	arroz_con_mango Persona {
		nombre : higuerote;
		sexo : negro;
		edad : mango;
	};
	
	arroz_con_mango Registro {
		codigo : mango;
		usuario : Persona;
	};

	culito registro_0 : Registro = {{"Junior", 'M', 26}};

	culito registro_1 : Registro = {1, {"Junior", 'M', 26}, "otro campo"};
	
	culito registro_2 : Registro = {2, {"Junior", 'M'}};

	culito registro_3 : Registro = {3, {"Junior", 'M', 26, 1999}};
};